# midpilot-connector-gen

./: .dockerignore  .env-example  .env.test-example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.base  README.md  alembic.ini  docker-compose.dev.yaml  docker-compose.yaml  entrypoint.sh  pyproject.toml  server.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_scrape_job_ids_column_to_.py  003_add_normalized_input_column_to_jobs_.py  004_rename_documentation_items_id_and_page_.py  005_rework_relevant_chunks_for_result_keys.py
docs/: openapi.json
examples/: scim_minimal_spec.json
src/: app.py  config.py  pool.py  router.py
src/common/: chunks.py  embeddings.py  enums.py  errors.py  exception_handlers.py  jobs.py  langfuse.py  llm.py  logger.py  metadata.py  normalize_input.py  schema.py  status_response.py
src/common/chunk_filter/: filter.py  schema.py
src/common/chunk_processor/: llms.py  processor.py  prompts.py  schema.py
src/common/chunking/: __init__.py  schema.py  tokens.py
src/common/database/: config.py
src/common/database/models/: __init__.py  base.py  documentation_item.py  job.py  job_progress.py  relevant_chunk.py  session.py  session_data.py
src/common/database/repositories/: documentation_repository.py  job_repository.py  relevant_chunk_repository.py  session_repository.py
src/common/documentation/: __init__.py  content_types.py  schemas.py
src/common/jobs/: __init__.py  cache.py  futures.py  lifecycle.py  runner.py  session_persistence.py
src/common/session/: documentation_upload.py  router.py  schema.py  session.py
src/common/session/utils/: documentation_upload.py
src/common/utils/: coerce.py  normalize.py  normalize_input.py  relevance.py  session_info_metadata.py  session_metadata.py  status_response.py
src/common/web/: __init__.py  fetch.py  link_classification.py  schemas.py  search.py
src/modules/: __init__.py
src/modules/codegen/: enums.py  orchestration.py  repair.py  router.py  schema.py  service.py
src/modules/codegen/core/: base.py  generate_groovy.py  operation.py  operations.py
src/modules/codegen/documentations/: 40-search-users.adoc  authentication.adoc
src/modules/codegen/prompts/: authorization_prompts.py  cleanup_prompts.py  connIDPrompts.py  connid_prompts.py  createPrompts.py  deletePrompts.py  nativeSchemaPrompts.py  native_schema_prompts.py  relationPrompts.py  relation_prompts.py  repair_prompts.py  searchPrompts.py  updatePrompts.py
src/modules/codegen/selection/: authorization.py  docs_loader.py  protocol.py  protocol_selectors.py  session_metadata.py
src/modules/codegen/utils/: api_type_helper.py  base_generator.py  generate_groovy.py  groovy_validation.py  map_to_record.py  operation_generators.py  postprocess.py  prompt_records.py  protocol_selectors.py
src/modules/digester/: enums.py  inputs.py  results.py  router.py  schema.py  service.py
src/modules/digester/aggregation/: merges.py  sequence_merge.py
src/modules/digester/apitype/: __init__.py  availability.py  knowledge.py  scim_cloud.py
src/modules/digester/entities/: attribute_filters.py  object_classes.py  relations.py  scim_resource.py
src/modules/digester/extraction/: __init__.py  chunk_extraction.py  llm_execution.py  metadata_helper.py  sequences.py
src/modules/digester/extractors/: __init__.py  apitype.py  attributes.py  auth.py  connectivity_endpoint.py  endpoints.py  info.py  object_class.py  relations.py
src/modules/digester/prompts/: apitype_knowledge_prompts.py  apitype_prompts.py  attributes_prompts.py  authPrompts.py  auth_prompts.py  connectivity_endpoint_prompts.py  endpointsPrompts.py  infoAboutSchemaPrompts.py  info_about_schema_prompts.py  info_prompts.py  objectClassAttributesPrompts.py  objectClassPrompts.py  (+5 more)
src/modules/discovery/: prompts.py  router.py  schema.py  service.py
src/modules/scrape/: fucntions.py  functions.py  llms.py  prompts.py  router.py  schema.py  service.py
src/smart_integration_ms.egg-info 10-45-15-547.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test/: __init__.py
test/integration/: test_app.py
test/integration/common/: test_session_documentation.py
test/unit/: conftest.py
test/unit/common/: test_api_conventions.py  test_cache_control.py  test_chunk_filter.py  test_chunk_processor_schema.py  test_chunking_schema.py  test_coerce.py  test_documentation_repository.py  test_documentation_schemas.py  test_documentation_upload.py  test_documentation_upload_chunking.py  test_documentation_upload_worker.py  test_exception_handlers.py  test_jobs.py  test_llm.py  test_logger.py  test_relevance.py  test_session_info_metadata.py
test/unit/modules/: conftest.py
(+188 files in other folders)
