[project]
name = "midpilot-connector-gen"
version = "0.1.0"
description = "Midpilot Connector Generator"
readme = "README.md"
requires-python = ">=3.13.4"
dependencies = [
    "fastapi>=0.136.0",
    "uvicorn[standard]>=0.44.0",
    "pydantic>=2.13.1",
    "pydantic-settings>=2.13.1",
    "colorlog>=6.10.1",
    "httpx>=0.28.1",
    "langchain>=1.2.15",
    "langchain-openai>=1.1.14",
    "pyyaml>=6.0.3",
    "types-pyyaml>=6.0.12.20260408",
    "ddgs>=9.13.1",
    "crawl4ai>=0.8.6",
    "langchain-community>=0.4.1",
    "langchain-chroma>=1.1.0",
    "langchain-ollama>=1.1.0",
    "markdownify>=1.2.2",
    "langchain-core>=1.2.31",
    "langsmith>=0.7.32",
    "langfuse>=4.3.1",
    "lxml-stubs>=0.5.1",
    "python-multipart>=0.0.26",
    "validators>=0.35.0",
    "requests>=2.33.1",
    "transformers>=5.5.4",
    "sqlalchemy>=2.0.49",
    "alembic>=1.18.4",
    "psycopg2-binary>=2.9.11",
    "asyncpg>=0.31.0",
    "python-dotenv>=1.2.2",
    "groovy-parser>=0.2.2",
]

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "poethepoet>=0.44.0",
    "ruff>=0.15.11",
    "pre-commit>=4.5.1",
    "pytest-watcher>=0.6.3",
    "requests>=2.33.1",
    "types-requests>=2.33.0.20260408",
    "types-urllib3>=1.26.25.14",
]

# until uv implements task runner we use poethepoet
# https://github.com/astral-sh/uv/issues/5903
[tool.poe.tasks]
start.cmd = "server.py"
start.envfile = ".env"
test.cmd = "pytest"
test.envfile = ".env.test"
test-watch.cmd = "ptw ."
test-watch.envfile = ".env.test"
# we must ignore clearml directory in typecheck because it does have separate dependencies
# that we dont want unless we are specifically using clearml
typecheck = "mypy . --exclude=.venv --exclude=clearml"
stylecheck = "ruff format --diff"
lint = "ruff check"
fix = [
  { cmd = "ruff check  --fix" },
  { cmd = "ruff format" },
]
qa = ["typecheck", "lint", "stylecheck", "test test/unit"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "TID252"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.mypy]
python_version = "3.12"
plugins = ['pydantic.mypy']
files = ["src", "test"]
explicit_package_bases = true

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["test"]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
